--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "babel src -d build -w",
     "test": "jest --watchAll",
     "prepare": "npm run build",
-    "prepublishOnly": "npm test"
+    "prepublishOnly": "npm test",
+    "release": "np"
   },
   "babel": {
     "presets": [
@@ -33,6 +34,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-latest": "^6.24.1",
-    "jest": "^24.7.1"
+    "jest": "^24.7.1",
+    "np": "^4.0.2"
   }
 }
